# anlpy

./: .gitignore  README.md  setup.py
anlpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/: make_anlpy_project.sh  run.py  run_user_anl.sh
example/anltest/: CMakeLists.txt  setup.py
example/anltest/source/: LoggerText.cpp  LoggerText.hpp  TimeGetter.cpp  TimeGetter.hpp  pyfunc.cpp
example/anltest/test/: run.py
example/ccana/: CMakeLists.txt  setup.py
example/ccana/ccana.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/ccana/source/: ConvertGhittree.cpp  ConvertGhittree.hpp  Extract2Photon.cpp  Extract2Photon.hpp  FilterComptree.cpp  FilterComptree.hpp  FilterComptree_inc.hpp  Iterate2Photon3D.cpp  Iterate2Photon3D.hpp  IterateCone3D.cpp  IterateCone3D.hpp  PETimager.cpp  PETimager.hpp  Project2Photon3D.cpp  Project2Photon3D.hpp  ProjectComptree.cpp  ProjectComptree.hpp  ProjectCone3D.cpp  ProjectCone3D.hpp  ProjectConeETCC.cpp  ProjectConeETCC.hpp  extract.cpp  iterate.cpp  pyfunc.cpp
example/dsdana/: CMakeLists.txt  cmake_uninstall.cmake.in  setup.py
example/dsdana/run/: example_output.root  output.root  run.py  test.C
example/dsdana/run/poly5/: run.py
example/dsdana/run/spline3/: analysis_hittree.py  calfunc_spline.root  database_spline.txt  example_data_cc_hittree.root
example/dsdana/source/: ApplyDatabase.cpp  ApplyDatabase.hpp  CoupleHit.cpp  CoupleHit.hpp  DSDdatabase.cpp  DSDdatabase.hpp  DSDdatabaseSpline.cpp  DSDdatabaseSpline.hpp  MergeAdjacent.cpp  MergeAdjacent.hpp  ReadTTree.cpp  ReadTTree.hpp  WriteTTree.cpp  WriteTTree.hpp  main.cpp  pyfunc.cpp
example/sim4ana/: .gitignore  CMakeLists.txt  setup.py
example/sim4ana/run/: convert_g4data.py  out.root
example/sim4ana/source/: ApplyEnergyResponse.cpp  ApplyEnergyResponse.hpp  BeginG4TreeAnalysis.cpp  BeginG4TreeAnalysis.hpp  ConvertToLv1Data.cpp  ConvertToLv1Data.hpp  CoupleHit.cpp  CoupleHit.hpp  CutAnalysisThreshold.cpp  CutAnalysisThreshold.hpp  CutReadoutThreshold.cpp  CutReadoutThreshold.hpp  DiffuseEnergyCharge.cpp  DiffuseEnergyCharge.hpp  ExtractCompton.cpp  ExtractCompton.hpp  HistogramCompton.cpp  HistogramCompton.hpp  JudgeTrigger.cpp  JudgeTrigger.hpp  MergeAdjacentStrip.cpp  MergeAdjacentStrip.hpp  ReadTTree.cpp  ReadTTree.hpp  SelectHitPattern.cpp  SelectHitPattern.hpp  WriteTTree.cpp  WriteTTree.hpp  pyfunc.cpp
source/: CMakeLists.txt  hello_py.cpp  main.cpp  setup.py
source/anlpy/: CMakeLists.txt  anlpy.cpp  corepy.cpp
source/bnk/: CMakeLists.txt  bnk.cpp  bnk.hpp
source/com_cli/: CMakeLists.txt
source/core/: ANLCross.hpp  ANLCross_2.cpp  ANLModuleBase.hpp  ANLStatus.hpp  CMakeLists.txt
source/evs/: CMakeLists.txt  evs.cpp  evs.hpp
src/: CMakeLists.txt
src/anl/source/: ANLStatus.hpp  ANLmanager.cpp  ANLmanager.hpp  ANLmoduleStacker.cpp  ANLmoduleStacker.hpp  VANL_Module.hpp  VANL_Parameters.hpp  pyfunc_anl.cpp
src/anl/source/old/: ANL.hpp  ANLCross_0.cpp  ANLCross_1.cpp  ANL_0.cpp  ANL_1.cpp  ANL_2.cpp  anl.cpp
src/bnk/: CMakeLists.txt
src/bnk/source/: bnk.cpp  bnk.hpp  bnk_spec.cpp  databank.hpp  make_bnk_spec.sh
src/bnk/source/old/: bnk.cc  bnk.h
src/com_cli/: CMakeLists.txt
src/com_cli/source/: clitest.cpp  com_cli.hpp  com_cli_1.cpp
src/evs/: CMakeLists.txt
src/evs/source/: evs.cpp  evs.hpp
tools/: make_anlpy_project.sh  run_user_anl.sh
