cmake_minimum_required(VERSION 3.16)
#add_library(COMCLI com_cli_1.cpp com_cli_2.cpp com_cli_3.cpp com_cli_compatible.cpp com_cli_private.cpp)
#file(GLOB SOURCE *.cpp)
# add_library(ANLcomcli ${SOURCE})
# #add_library(ANLcomcli SHARED)
# add_library(ANLcomcli::ANLcomcli ALIAS ANLcomcli)

# install(
#   TARGETS COMCLI
#   DESTINATION lib
#   EXPORT COMCLIConfig
#   )
# install(
#   EXPORT COMCLIConfig
#   NAMESPACE COMCLI::
#   DESTINATION lib/cmake/COMCLI
#   )
